@@ -97,13 +97,13 @@ make install DESTDIR=%{buildroot}
 %defattr(-,root,root,-)
 %{_bindir}/args
 %{_bindir}/car
-%{_bindir}/scrub
+%{_bindir}/scrub-files
 %{_bindir}/mdsum
 %{_bindir}/sockaddr
 %{_bindir}/zerofill
 %{_mandir}/man1/args.*
 %{_mandir}/man1/car.*
-%{_mandir}/man1/scrub.*
+%{_mandir}/man1/scrub-files.*
 %{_mandir}/man1/mdsum.*
 %{_mandir}/man1/sockaddr.*
 %{_mandir}/man1/zerofill.*
