@@ -14,15 +14,15 @@ INCLUDES = -I$(top_srcdir)/inc
 LDADD = ../corelib/libucommon.la @UCOMMON_LIBS@ @UCOMMON_CLINK@
 EXTRA_DIST = *.1
 
-man_MANS = args.1 scrub.1 mdsum.1 zerofill.1 car.1 sockaddr.1
-bin_PROGRAMS = args scrub mdsum zerofill car sockaddr
+man_MANS = args.1 scrub-files.1 mdsum.1 zerofill.1 car.1 sockaddr.1
+bin_PROGRAMS = args scrub-files mdsum zerofill car sockaddr
 
 args_SOURCES = args.cpp
 
 sockaddr_SOURCES = sockaddr.cpp
 
-scrub_SOURCES = scrub.cpp
-scrub_LDFLAGS = @SECURE_LOCAL@
+scrub_files_SOURCES = scrub.cpp
+scrub_files_LDFLAGS = @SECURE_LOCAL@
 
 mdsum_SOURCES = mdsum.cpp
 mdsum_LDFLAGS = @SECURE_LOCAL@
