@@ -1,5 +1,6 @@
 from ucommon 5.0.4 to 5.0.5
 - fix for commoncpp emulation when no direct parent commoncpp thread.
+- rename scrub to scrub files to avoid name conflict
 - some enhacement in cmake
 
 from ucommon 5.0.3 to 5.0.4
